--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>curso de html</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo reprehenderit sapiente, eius nisi! Necessitatibus animi odio tempore natus vitae adipisci, rem delectus sunt fugit quibusdam incidunt fugiat vero.</p>
+    <div>
+        <span>hola a todos</span>
+    </div>
 </body>
 </html>
