--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>clase de git</title>
 </head>
 <body>
-    <h1>curso de html</h1>
+    <h2>mi titulo coder</h2>
+    <h1>curso de css</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo reprehenderit sapiente, eius nisi! Necessitatibus animi odio tempore natus vitae adipisci, rem delectus sunt fugit quibusdam incidunt fugiat vero.</p>
     <div>
-        <span>hola a todos</span>
     </div>
 </body>
 </html>
